# Sentinels

./: .gitignore  README.md  implementation_plan.md  task.md  tmp_login.tsx
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  Dockerfile  check_audit.py  check_db.py  check_hash.py  check_lockout.py  check_users.py  pyproject.toml  test_db.py
backend/alerting/: __init__.py  router.py  slack.py
backend/api/: __init__.py  config.py  database.py  main.py  oauth.py  scheduler.py  security.py  seed.py  utils.py  websocket_manager.py
backend/ingestion/: __init__.py  collector.py  real_collector.py
backend/migrations/: env.py
backend/migrations/versions/: 67e69cbc808c_initial_manual_creation.py
backend/ml/: __init__.py  anomaly.py  forecast.py  graph.py  postmortem.py  rca.py  registry.py  train.py
backend/observability/: __init__.py  metrics.py  tracing.py
backend/pipeline/: __init__.py  features.py  validation.py
backend/tests/: conftest.py  test_api.py  test_cookies.py  test_ml.py  test_security.py
design/: DESIGN.md
design/sentinel_login_final_polish/: code.html
design/sentinel_overview_final_polish/: code.html
design/sentinel_profile_final_polish/: code.html
design/sentinel_slack_integration_setup/: code.html
design/sentinel_user_management_final_polish/: code.html
design/sentinel_war_room_final_polish/: code.html
docs/: OPERATIONS.md  SCALING.md  api.md  architecture.md  ml-models.md  runbook.md  scale.md
docs/adr/: 001-fastapi-backend.md  002-nextjs-frontend.md  003-ml-polling-vs-streaming.md  004-ollama-local-rca.md  005-timescaledb-future.md
frontend/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts  ts_errors.txt
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/anomaly-lab/: page.tsx
frontend/app/deployments/: page.tsx
frontend/app/forecasts/: page.tsx
frontend/app/incidents/: page.tsx
frontend/app/login/: page.tsx
infra/: docker-compose.yml  prometheus.yml
infra/grafana/: sentinel-dashboard.json
scripts/: chaos.ps1  dev-backend.ps1  dev-frontend.ps1  dev-mlflow.ps1  dev.ps1  install.ps1  ollama-check.ps1  reset-admin.ps1  seed.ps1  test.ps1  train.ps1
(+39 files in other folders)
